@@ -16,6 +16,7 @@
 -------------------------------------------------------------------------------
 
 	2009-05-28
+	* Remove two scripts supposed to be rebuilt from distro.
 	* Added test case for Stephen Davies's Q-P EOL problem (see -05-25).
 
 	2009-05-25
